transition to java 17 and spring boot 3, some changes